[package]
name = "woods-server"
version = "0.1.0"
edition = "2018"

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = ["dynamic"] }
bevy_networking_turbulence = { version = "0.3.3" }
simple_logger = { version = "1.13.0" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"